# middleware/authMiddleware.js
@@ -1,0 +1,6 @@
+module.exports = (req, res, next) => {
+    if (req.isAuthenticated()) {
+      return next();
+    }
+    res.status(401).json({ message: 'Unauthorized' });
+  };
